--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,23 @@ p {
   max-width: 264px;
 }
 
+.benefits-icon-container {
+  width: 100%;
+  height: 112px;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  background-color: #f4f4fd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.benefits-item-icon {
+  fill: currentColor;
+  display: block;
+}
+
 .benefits-subtitle {
   color: #2e2f42;
   font-size: 20px;
