--- a/css/styles.css
+++ b/css/styles.css
@@ -302,11 +302,11 @@ p {
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.team-item-info {
-  padding: 32px 0;
+.team-img {
 }
 
-.team-img {
+.team-item-info {
+  padding: 32px 0;
 }
 
 .team-subtitle {
@@ -318,12 +318,51 @@ p {
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
+
 .team-item-text {
   color: #434455;
   text-align: center;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+
+.team-icons-container {
+  display: flex;
+  justify-content: center;
+}
+
+.team-icons-list {
+  max-width: 232px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+
+.team-icon-item {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  padding: 12px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-icon-item:hover,
+.team-icon-item:focus {
+  background-color: #404bbf;
+}
+
+.team-soc-link {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.team-icon-svg {
+  fill: #f4f4fd;
 }
 
 /** ============ TEAM END ============  */
