--- a/css/styles.css
+++ b/css/styles.css
@@ -392,14 +392,53 @@ p {
 .portfolio-item {
   max-width: 360px;
   background: #fff;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-cover-container {
+  position: relative;
+  overflow: hidden;
 }
 
 .portfolio-img {
 }
 
+.portfolio-cover-wrap {
+  position: absolute;
+  padding: 40px 32px;
+  top: 0;
+  background: #4d5ae5;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .portfolio-cover-wrap {
+  transform: translateY(0%);
+}
+
+.portfolio-cover-text {
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.02em;
+}
+
 .portfolio-item-info {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
+  border-top: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .portfolio-item-info {
+  border: 1px solid #f4f4fd;
   border-top: none;
 }
 
