--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,14 @@ p {
   padding: 100px 0;
 }
 
+.footer-container {
+  display: flex;
+}
+
+.footer-info {
+  margin-right: 120px;
+}
+
 .logo-footer {
   display: inline-block;
   margin-bottom: 16px;
@@ -482,6 +490,52 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
+}
+
+/** ============= icons-container =============  */
+
+.footer-soc-container {
+}
+
+.footer-soc-title {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.footer-icons-list {
+  max-width: 232px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.footer-icon-item {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  padding: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon-item:hover,
+.footer-icon-item:focus {
+  background-color: #31d0aa;
+}
+
+.footer-soc-link {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.footer-icon-svg {
+  fill: #f4f4fd;
 }
 
 /** ============= FOOTER END =============  */
