--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,7 @@ p {
 
 .hero {
   max-width: 1440px;
+  margin: 0 auto;
   background-color: #2e2f42;
   background-image: linear-gradient(
       to bottom,
