--- a/css/styles.css
+++ b/css/styles.css
@@ -523,21 +523,25 @@ p {
 .footer-icon-item {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+  /* border-radius: 50%;
   background-color: #4d5ae5;
-  padding: 8px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-icon-item:hover,
-.footer-icon-item:focus {
-  background-color: #31d0aa;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .footer-soc-link {
-  display: block;
+  background-color: #4d5ae5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: #31d0aa;
 }
 
 .footer-icon-svg {
