--- a/css/styles.css
+++ b/css/styles.css
@@ -415,6 +415,14 @@ p {
 }
 
 .portfolio-cover-wrap {
+}
+
+.portfolio-cover-text {
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.02em;
+
   position: absolute;
   padding: 40px 32px;
   top: 0;
@@ -424,15 +432,8 @@ p {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .portfolio-cover-wrap {
+.portfolio-item:hover .portfolio-cover-text {
   transform: translateY(0%);
-}
-
-.portfolio-cover-text {
-  color: #f4f4fd;
-  font-size: 16px;
-  line-height: 1.5; /* 150% */
-  letter-spacing: 0.02em;
 }
 
 .portfolio-item-info {
