--- a/css/styles.css
+++ b/css/styles.css
@@ -334,12 +334,13 @@ p {
 }
 
 .team-icons-container {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
 }
 
 .team-icons-list {
   max-width: 232px;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
