--- a/css/styles.css
+++ b/css/styles.css
@@ -333,11 +333,6 @@ p {
   margin-bottom: 8px;
 }
 
-.team-icons-container {
-  /* display: flex;
-  justify-content: center; */
-}
-
 .team-icons-list {
   max-width: 232px;
   margin: 0 auto;
@@ -350,21 +345,26 @@ p {
 .team-icon-item {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+  /* border-radius: 50%;
   background-color: #4d5ae5;
   padding: 12px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.team-icon-item:hover,
-.team-icon-item:focus {
+.team-soc-link:hover,
+.team-soc-link:focus {
   background-color: #404bbf;
 }
 
 .team-soc-link {
-  display: block;
+  background-color: #4d5ae5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon-svg {
@@ -522,9 +522,6 @@ p {
 .footer-icon-item {
   width: 40px;
   height: 40px;
-  /* border-radius: 50%;
-  background-color: #4d5ae5;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .footer-soc-link {
